--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/home.css">
+  <link rel="stylesheet" href="css/modal.css">
   <link rel="stylesheet" href="css/responsive.css">
 </head>
 
@@ -16,7 +17,7 @@
     <div class="content">
       <header>
         <img src="/assets/logo.svg" alt="logomarca">
-        <a href="#">
+        <a href="/create-point.html">
           <span></span>
           Cadastre um ponto de coleta
         </a>
@@ -31,6 +32,28 @@
       </main>
     </div>
   </div>
+
+  <div id="modal" class="hide">
+    <div class="content">
+
+      <div class="header">
+        <h1>Pontos de Coleta</h1>
+        <a href="/search-results.html">Fechar</a>
+      </div>
+
+      <form action="/search-results.html">
+        <label for="search">Cidade</label>
+        <div class="search field">
+          <input type="text" name="search" placeholder="Pesquise a cidade">
+          <button>
+            <img src="/assets/search.svg" alt="Buscar">
+          </button>
+        </div>
+      </form>
+
+    </div>
+  </div>
+  <script src="/scripts/index.js"></script>
 </body>
 
 </html>
